убрал заглушки